Fixed feedback on mobile bug and adjusted filter in search to mobile

--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -13,6 +13,8 @@ body {
 .feedback-bar {
     background-color: #5b73aa;
     color: #fff;
+    position: relative;
+    z-index: 1;
 }
 
 .feedback-bar a {
